--- a/style.css
+++ b/style.css
@@ -1,8 +1,22 @@
 :root {
     --cyan: hsl(179, 62%, 43%);
+    --light-cyan: hsl(179, 62%, 43%, 80%);
     --bright-yellow: hsl(71, 73%, 54%);
     --light-gray: hsl(204, 43%, 93%);
     --grayish-blue: hsl(218, 22%, 67%);
+    --white: hsl(0, 0%, 100%);
+}
+
+@font-face {
+    font-family: "Karla";
+    src: url("./fonts/Karla-Regular.ttf") format("truetype");
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Karla";
+    src: url("./fonts/Karla-Bold.ttf") format("truetype");
+    font-weight: 700;
 }
 
 *,
@@ -14,10 +28,82 @@
 }
 
 body {
+    background-color: var(--light-gray);
+    font-family: "Karla", sans-serif;
     min-height: 100dvh;
 }
 
 a {
     display: inline-block;
     text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+main {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    min-height: 100dvh;
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 48rem;
+}
+
+.community {
+    background-color: var(--white);
+    flex-grow: 1;
+}
+
+.community__title {
+    color: var(--cyan);
+}
+
+.community__sub-heading {
+    color: var(--bright-yellow);
+}
+
+.community__content {
+    color: var(--grayish-blue);
+}
+
+.community,
+.subscription,
+.recommendation {
+    padding: 2.5em;
+}
+
+.subscription,
+.recommendation {
+    flex-basis: 50%;
+}
+
+.subscription {
+    background-color: var(--cyan);
+}
+
+.subscription__title,
+.subscription__price,
+.subscription__content,
+.subscription__button,
+.recommendation__title,
+.recommendation__link {
+    color: var(--white);
+}
+
+.subscription__button {
+    background-color: var(--bright-yellow);
+}
+
+.recommendation {
+    background-color: var(--light-cyan);
+}
+
+.recommendation__link {
+    opacity: .6;
 }
